# xdrgen

./: Main.hs  README  README.md  XDR.cabal  XDRCompile.hs
Data/: XDR.hs
Data/XDR/: AST.hs  PPKeywords.hs  PPUtils.hs  Parser.hs  PathUtils.hs  PrettyPrintC.hs  PrettyPrintCPP.hs  PrettyPrintJava.hs  PrettyPrintRpc.hs  PrettyPrinter.hs
doc/: journal.org
templates/rpc/: header.sg
tests/: array1.xdr  comment.xdr  const1.xdr  enum1.xdr  import1.xdr  opaque1.xdr  struct1.xdr  struct2.xdr  typedef1.xdr  typedef2.xdr  union1.xdr  void1.xdr
