Name:           xdrgen
Version:        0.1
Cabal-Version:  >= 1.2
License:        GPL
License-File:   LICENSE
Author:         Joe Thornber
Homepage:       
Category:       Data
Synopsis:       XDR utilities
Build-Type:     Simple

Executable XDRCompile
  Build-Depends: base >= 4.0, parsec >= 3, syb, containers, wl-pprint, typehash, pureMD5, bytestring, filepath
  Main-Is: XDRCompile.hs

Library
  Build-Depends:     base >= 4.0, parsec >= 3, syb, containers, wl-pprint, typehash, pureMD5, bytestring, filepath
  Exposed-modules:   Data.XDR.AST, Data.XDR.Parser, Data.XDR.PrettyPrinter, Data.XDR.PrettyPrintC
