Name:           xdrgen
Version:        0.1
Cabal-Version:  >= 1.2
License:        GPL
License-File:   LICENSE
Author:         Joe Thornber
Homepage:       
Category:       Data
Synopsis:       XDR utilities
Build-Type:     Simple

Executable xdrgen
  Build-Depends: base >= 4.0, parsec >= 3, syb, containers, directory, wl-pprint, typehash, pureMD5, bytestring, pathtype, mtl
  Main-Is: Main.hs

Library
  Build-Depends:     base >= 4.0, parsec >= 3, syb, containers, directory, wl-pprint, typehash, pureMD5, bytestring, pathtype, mtl
  Exposed-modules:   Data.XDR
